src/snapshots/bl__tests__snapshots__cmd_media.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Override CSS media features

Usage: bl media [OPTIONS]

Options:
      --color-scheme <color-scheme>      Color scheme: light, dark, no-preference
  -v, --verbose                          Enable debug logging
      --reduced-motion <reduced-motion>  Reduced motion: reduce, no-preference
      --forced-colors <forced-colors>    Forced colors: active, none
      --contrast <contrast>              Contrast: more, less, no-preference
      --media <media>                    Media type: screen, print
      --headless                         Hide browser window (visible by default)
      --json                             Output as JSON
  -h, --help                             Print help

Examples:
  bl media --color-scheme dark
  # Enable dark mode

  bl media --reduced-motion reduce
  # Reduce motion

  bl media --color-scheme light --forced-colors active
  # Override multiple features
