src/snapshots/bl__tests__snapshots__cmd_page.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Manage browser pages (new, close, switch)

Usage: bl page [OPTIONS] [COMMAND]

Commands:
  new     Open a new browser page
  close   Close a browser page by index (default: current page)
  switch  Switch to a browser page by index or URL substring
  help    Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose   Enable debug logging
      --headless  Hide browser window (visible by default)
      --json      Output as JSON
  -h, --help      Print help
