src/snapshots/bl__tests__snapshots__cmd_pages.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
List all open browser pages

Usage: bl pages [OPTIONS]

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl pages
  # [0] https://example.com
  # [1] https://google.com
