src/snapshots/bl__tests__snapshots__cmd_paths.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Print browser and cache paths

Usage: bl paths [OPTIONS]

Options:
      --json     Output as JSON
  -v, --verbose  Enable debug logging
  -h, --help     Print help
