src/snapshots/bl__tests__snapshots__cmd_record.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Record browser sessions (screenshots and snapshots)

Usage: bl record [OPTIONS] [COMMAND]

Commands:
  start  Start a recording
  stop   Stop recording and save
  group  Manage recording groups
  chunk  Manage recording chunks
  help   Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose   Enable debug logging
      --headless  Hide browser window (visible by default)
      --json      Output as JSON
  -h, --help      Print help
