src/snapshots/bl__tests__snapshots__cmd_reload.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Reload the current page

Usage: bl reload [OPTIONS]

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl reload
  # Reload the current page
